--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^12.9.4",
     "negotiator": "^1.0.0",
     "next": "15.3.1",
+    "next-intl": "^4.1.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
