--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@fontsource/ibm-plex-sans": "^5.2.5",
     "@formatjs/intl-localematcher": "^0.6.1",
-    "iconoir-react": "^7.11.0",
+    "@sanity/vision": "^3.88.1",
     "motion": "^12.9.4",
     "negotiator": "^1.0.0",
     "next": "15.3.1",
@@ -23,12 +23,14 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.3.2",
     "@tailwindcss/postcss": "^4.1.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
