--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@fontsource/ibm-plex-sans": "^5.2.5",
     "@formatjs/intl-localematcher": "^0.6.1",
+    "@sanity/client": "^7.1.0",
+    "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.88.1",
     "motion": "^12.9.4",
     "negotiator": "^1.0.0",
