--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/client": "^7.1.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.88.1",
+    "date-fns": "^4.1.0",
     "motion": "^12.9.4",
     "negotiator": "^1.0.0",
     "next": "15.3.1",
