--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   "dependencies": {
     "@fontsource/ibm-plex-sans": "^5.2.5",
     "@formatjs/intl-localematcher": "^0.6.1",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.2",
     "@sanity/client": "^7.1.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.88.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.509.0",
     "motion": "^12.9.4",
