--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "type-check": "tsc -b",
     "format": "prettier --write .",
     "lint:fix": "next lint --fix",
-    "prepare": "husky install",
-    "vercel-build": "npm install --legacy-peer-deps && next build"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@fontsource/ibm-plex-sans": "^5.2.5",
